--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "@ngx-translate/http-loader": "^2.0.1",
     "animate.css": "^3.6.1",
     "core-js": "^2.4.1",
+    "file-input-accessor": "^1.0.11",
     "rxjs": "^5.5.6",
-    "zone.js": "^0.8.19",
-    "underscore": "latest"
+    "underscore": "latest",
+    "zone.js": "^0.8.19"
   },
   "devDependencies": {
     "@angular/cli": "~1.7.2",
