--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "@angular/router": "^5.2.0",
     "@ngx-translate/core": "^9.1.1",
     "@ngx-translate/http-loader": "^2.0.1",
+    "angular2-text-mask": "^8.0.4",
     "animate.css": "^3.6.1",
     "core-js": "^2.4.1",
     "file-input-accessor": "^1.0.11",
+    "ng4-country-phone-select": "^1.3.2",
+    "ngx-mask": "^2.4.4",
     "rxjs": "^5.5.6",
     "underscore": "latest",
     "zone.js": "^0.8.19"
