--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "animate.css": "^3.6.1",
     "core-js": "^2.4.1",
     "file-input-accessor": "^1.0.11",
+    "ng-dynamic": "^3.0.2",
     "ng4-country-phone-select": "^1.3.2",
     "ngx-mask": "^2.4.4",
     "rxjs": "^5.5.6",
